2022-10-04-frequentis/k/16_namespace_admin.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devel
