2022-10-04-frequentis/k/configmap_envfrom.yml
apiVersion: v1
kind: Pod
metadata:
  name: envfrom
spec:
  containers:
    - name: main
      image: busybox
      command:
        - /bin/sh
        - -c
        - env | grep MY_
      resources:
        requests:
          cpu: 30m
          memory: 20Mi
        limits:
          cpu: 30m
          memory: 20Mi
  restartPolicy: Never
