2022-10-04-frequentis/k/counter-with-volume.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    project: counter
spec:
  serviceName: redis
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      project: counter
      app: redis
  replicas: 5
  template:
    metadata:
      labels:
        project: counter
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          command:
            - redis-server
          args:
            - --appendonly
            - "yes"
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
